--- a/report.html
+++ b/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16377],[],[[4,0,1,0,[],[1,661,11550],[]],[5,0,1,0,[],[1,12213,4162],[]]],[],[2,2,2,2]];
+window.output["suite"] = [1,2,3,0,[],[0,0,270],[],[[4,0,1,0,[],[0,256,8,5],[]],[6,0,1,0,[7,8,9],[0,264,6,5],[]]],[],[2,0,2,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*trucosElementos","*/Users/whinstondj/Desktop/Arrays y Loops/trucosElementos.robot","*trucosElementos.robot","*001 Ir al blog de Winston Castillo","*002 Abrir Ventana Modal"]);
+window.output["strings"] = window.output["strings"].concat(["*","*trucosElementos","*/Users/whinstondj/Desktop/Arrays y Loops/trucosElementos.robot","*trucosElementos.robot","*001 Ir al blog de Winston Castillo","*No keyword with name 'Open Browser' found.","*002 Abrir Ventana Modal","*TestError","*TestFuncional","*XpathNuevo"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"trucosElementos","name":"trucosElementos","pass":2}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0}],[{"elapsed":"00:00:00","fail":1,"label":"TestError","pass":0},{"elapsed":"00:00:00","fail":1,"label":"TestFuncional","pass":0},{"elapsed":"00:00:00","fail":1,"label":"XpathNuevo","pass":0}],[{"elapsed":"00:00:00","fail":2,"id":"s1","label":"trucosElementos","name":"trucosElementos","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1531075622070;
+window.output["baseMillis"] = 1531687462585;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16428;
+window.output["generated"] = 277;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
