--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8604],[],[[4,0,0,[],[1,173,8429],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11707],[],[[4,0,0,[5],[1,151,6858],[]],[6,0,0,[7],[1,7009,4698],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Arrays Loops Practice","*C:\\Users\\miliv\\OneDrive\\Desktop\\Udemy_Automation\\swaglabs\\ArraysLoops\\arrays_loops_practice.robot","*arrays_loops_practice.robot","*TC002 - Verify All Items Availability"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tricks","*C:\\Users\\miliv\\OneDrive\\Desktop\\Udemy_Automation\\swaglabs\\ArraysLoops\\Tricks.robot","*Tricks.robot","*TCWC01 - Verify Accesability of &quot;blog.winstoncastillo.com&quot;","*blog","*TCWC02 - Verify functionality of Modal Pop-up.","*Modal"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Arrays Loops Practice","name":"Arrays Loops Practice","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:07","fail":0,"label":"blog","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"label":"Modal","pass":1,"skip":0}],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Tricks","name":"Tricks","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1696135683172;
+window.output["baseMillis"] = 1696438245469;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8634;
+window.output["generated"] = 11723;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
